force-app/main/default/objects/AccountAssessment__c/AccountAssessment__c.object-meta.xml
<CustomObject>
    <label>取引先査定表</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>取引先査定表名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>