force-app/main/default/objects/AccountAssessment__c/fields/abnormal_dist__c.field-meta.xml
<CustomField>
    <fullName>abnormal_dist__c</fullName>
    <label>車検証上記載の距離異常</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>umu</valueSetName>
    </valueSet>
</CustomField>