force-app/main/default/objects/AccountAssessment__c/fields/absb_belt_right__c.field-meta.xml
<CustomField>
    <fullName>absb_belt_right__c</fullName>
    <label>シートベルト右</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>