force-app/main/default/objects/AccountAssessment__c/fields/absb_curtain_left__c.field-meta.xml
<CustomField>
    <fullName>absb_curtain_left__c</fullName>
    <label>カーテン左</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>