force-app/main/default/objects/AccountAssessment__c/fields/absb_sub_seat__c.field-meta.xml
<CustomField>
    <fullName>absb_sub_seat__c</fullName>
    <label>助手席シート</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>standard_01</valueSetName>
    </valueSet>
</CustomField>