force-app/main/default/objects/AccountAssessment__c/fields/ai_use_umu__c.field-meta.xml
<CustomField>
    <fullName>ai_use_umu__c</fullName>
    <label>AI判定使用有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>無</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>