force-app/main/default/objects/AccountAssessment__c/fields/Amount_content__c.field-meta.xml
<CustomField>
    <fullName>Amount_content__c</fullName>
    <label>金額内容【はなまるが入力】</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>assess_user_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>通常査定金額</fullName>
                <default>true</default>
                <label>通常査定金額</label>
            </value>
            <value>
                <fullName>買取保証金額</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>