force-app/main/default/objects/AccountAssessment__c/fields/AmountExpirationDateRemainingDays__c.field-meta.xml
<CustomField>
    <fullName>AmountExpirationDateRemainingDays__c</fullName>
    <formula>expiration_date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>金額有効期限残日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>