force-app/main/default/objects/AccountAssessment__c/fields/ana_tacho__c.field-meta.xml
<CustomField>
    <fullName>ana_tacho__c</fullName>
    <label>アナタコ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>