force-app/main/default/objects/AccountAssessment__c/fields/asses_tanto__c.field-meta.xml
<CustomField>
    <fullName>asses_tanto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>査定担当者</label>
    <referenceTo>Mst_Assess_Users__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>account_assessments_user</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>