force-app/main/default/objects/AccountAssessment__c/fields/asses_tanto_read__c.field-meta.xml
<CustomField>
    <fullName>asses_tanto_read__c</fullName>
    <formula>asses_tanto__r.Name</formula>
    <label>査定担当者</label>
    <type>Text</type>
</CustomField>