force-app/main/default/objects/AccountAssessment__c/fields/assess_regisit_no__c.field-meta.xml
<CustomField>
    <fullName>assess_regisit_no__c</fullName>
    <label>査定時登録No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>