force-app/main/default/objects/AccountAssessment__c/fields/assess_user_type__c.field-meta.xml
<CustomField>
    <fullName>assess_user_type__c</fullName>
    <label>査定担当者ユーザ種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>通常ユーザ</fullName>
            </value>
            <value>
                <fullName>オークションユーザ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>