force-app/main/default/objects/AccountAssessment__c/fields/assess_warning__c.field-meta.xml
<CustomField>
    <fullName>assess_warning__c</fullName>
    <label>査定時注意事項（取り外し部品、買取条件等）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>