force-app/main/default/objects/AccountAssessment__c/fields/assessment_date__c.field-meta.xml
<CustomField>
    <fullName>assessment_date__c</fullName>
    <label>査定日（金額提示日）【はなまるが入力】</label>
    <type>Date</type>
</CustomField>