force-app/main/default/objects/AccountAssessment__c/fields/auc_compe_price__c.field-meta.xml
<CustomField>
    <fullName>auc_compe_price__c</fullName>
    <label>競合額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>