force-app/main/default/objects/AccountAssessment__c/fields/auc_competitor__c.field-meta.xml
<CustomField>
    <fullName>auc_competitor__c</fullName>
    <label>競合数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>