force-app/main/default/objects/AccountAssessment__c/fields/auc_kettei_yoteibi__c.field-meta.xml
<CustomField>
    <fullName>auc_kettei_yoteibi__c</fullName>
    <label>決定予定日</label>
    <type>Date</type>
</CustomField>