force-app/main/default/objects/AccountAssessment__c/fields/auc_meigi_henko_date__c.field-meta.xml
<CustomField>
    <fullName>auc_meigi_henko_date__c</fullName>
    <label>名義変更年月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>