force-app/main/default/objects/AccountAssessment__c/fields/auc_repair_price__c.field-meta.xml
<CustomField>
    <fullName>auc_repair_price__c</fullName>
    <label>修理金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>