force-app/main/default/objects/AccountAssessment__c/fields/auc_submit_price__c.field-meta.xml
<CustomField>
    <fullName>auc_submit_price__c</fullName>
    <label>提示金額（税別）【はなまるが入力】</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>