force-app/main/default/objects/AccountAssessment__c/fields/auc_tax_price__c.field-meta.xml
<CustomField>
    <fullName>auc_tax_price__c</fullName>
    <label>消費税</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>含む</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>含まない</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>