force-app/main/default/objects/AccountAssessment__c/fields/auction_sale_date__c.field-meta.xml
<CustomField>
    <fullName>auction_sale_date__c</fullName>
    <label>オークション売却日【はなまるが入力】</label>
    <type>Date</type>
</CustomField>