force-app/main/default/objects/AccountAssessment__c/fields/car_hist__c.field-meta.xml
<CustomField>
    <fullName>car_hist__c</fullName>
    <label>車歴</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>自家用</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>レンタ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>