force-app/main/default/objects/AccountAssessment__c/fields/car_maker2__c.field-meta.xml
<CustomField>
    <fullName>car_maker2__c</fullName>
    <formula>car_maker__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーカー（表示用）</label>
    <type>Text</type>
</CustomField>