force-app/main/default/objects/AccountAssessment__c/fields/car_maker__c.field-meta.xml
<CustomField>
    <fullName>car_maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>account_assessments_car_maker</relationshipName>
    <type>Lookup</type>
</CustomField>