force-app/main/default/objects/AccountAssessment__c/fields/car_model2__c.field-meta.xml
<CustomField>
    <fullName>car_model2__c</fullName>
    <formula>car_model__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種（表示用）</label>
    <type>Text</type>
</CustomField>