force-app/main/default/objects/AccountAssessment__c/fields/car_model__c.field-meta.xml
<CustomField>
    <fullName>car_model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.car_maker__c</field>
            <operation>equals</operation>
            <valueField>Mst_Models__c.maker__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>account_assessments_model</relationshipName>
    <type>Lookup</type>
</CustomField>