force-app/main/default/objects/AccountAssessment__c/fields/car_type2__c.field-meta.xml
<CustomField>
    <fullName>car_type2__c</fullName>
    <formula>car_type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>型式（表示用）</label>
    <type>Text</type>
</CustomField>