force-app/main/default/objects/AccountAssessment__c/fields/car_type__c.field-meta.xml
<CustomField>
    <fullName>car_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型式</label>
    <referenceTo>Mst_Types__c</referenceTo>
    <relationshipLabel>査定表</relationshipLabel>
    <relationshipName>account_assest_types</relationshipName>
    <type>Lookup</type>
</CustomField>