force-app/main/default/objects/AccountAssessment__c/fields/Closed_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Notice_Date__c</fullName>
    <label>成約通知日</label>
    <type>Date</type>
</CustomField>