force-app/main/default/objects/AccountAssessment__c/fields/collection_completion_date__c.field-meta.xml
<CustomField>
    <fullName>collection_completion_date__c</fullName>
    <label>引取完了日【はなまるが入力】</label>
    <type>Date</type>
</CustomField>