force-app/main/default/objects/AccountAssessment__c/fields/collection_request_date__c.field-meta.xml
<CustomField>
    <fullName>collection_request_date__c</fullName>
    <label>引取依頼日</label>
    <type>Date</type>
</CustomField>