force-app/main/default/objects/AccountAssessment__c/fields/color_changed__c.field-meta.xml
<CustomField>
    <fullName>color_changed__c</fullName>
    <label>色替え</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>なし</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>あり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>