force-app/main/default/objects/AccountAssessment__c/fields/condenser__c.field-meta.xml
<CustomField>
    <fullName>condenser__c</fullName>
    <label>コンデンサー</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>〇</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>×</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>不明</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>