force-app/main/default/objects/AccountAssessment__c/fields/consumption_tax__c.field-meta.xml
<CustomField>
    <fullName>consumption_tax__c</fullName>
    <formula>floor( ( the_highest_bid__c -  TotalCommission__c ) / 10 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>