force-app/main/default/objects/AccountAssessment__c/fields/cotion_url__c.field-meta.xml
<CustomField>
    <fullName>cotion_url__c</fullName>
    <label>コーションURL</label>
    <type>Url</type>
</CustomField>