force-app/main/default/objects/AccountAssessment__c/fields/damage__c.field-meta.xml
<CustomField>
    <fullName>damage__c</fullName>
    <label>ダメージ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>フロント</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>サイド</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>リア</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>横転</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>水害</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>盗難発見</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>火災</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>エンジンフロー</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>ミッショントラブル</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ルーフ</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>下打ち</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>故障車</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>オーバーヒート</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>雹害</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>放置車両</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>足まわり</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>中古車</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>