force-app/main/default/objects/AccountAssessment__c/fields/dmg_asi_left_front__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_left_front__c</fullName>
    <label>足回り左前</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>