force-app/main/default/objects/AccountAssessment__c/fields/dmg_asi_left_front_width__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_left_front_width__c</fullName>
    <label>足回り左前標横幅</label>
    <length>255</length>
    <type>Text</type>
</CustomField>