force-app/main/default/objects/AccountAssessment__c/fields/dmg_asi_left_front_x__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_left_front_x__c</fullName>
    <label>足回り左前座標X</label>
    <length>255</length>
    <type>Text</type>
</CustomField>