force-app/main/default/objects/AccountAssessment__c/fields/dmg_asi_right_back__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_right_back__c</fullName>
    <label>足回り右後</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>