force-app/main/default/objects/AccountAssessment__c/fields/dmg_asi_right_back_height__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_right_back_height__c</fullName>
    <label>足回り右後座標高さ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>