force-app/main/default/objects/AccountAssessment__c/fields/dmg_asi_right_front_height__c.field-meta.xml
<CustomField>
    <fullName>dmg_asi_right_front_height__c</fullName>
    <label>足回り右前座標高さ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>