force-app/main/default/objects/AccountAssessment__c/fields/dmg_bonnet__c.field-meta.xml
<CustomField>
    <fullName>dmg_bonnet__c</fullName>
    <label>ボンネット</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>okng_hanyo</valueSetName>
    </valueSet>
</CustomField>