force-app/main/default/objects/AccountAssessment__c/fields/dmg_bonnet_height__c.field-meta.xml
<CustomField>
    <fullName>dmg_bonnet_height__c</fullName>
    <label>ボンネット座標高さ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>